# triton-demo

./: .dockerignore  .gitignore  Dockerfile  README.md  claude.md  decoder_client.py  demo.py  export.py  feature.py  jupyter_lab_config.py  main.py  pure_cif_client.py  pyproject.toml  test.py
export/: model.py
triton/bls-demo/: config.pbtxt
triton/bls-demo/1/: model.py
triton/cif_search/: config.pbtxt
triton/cif_search/1/: model.py
triton/decoder/: config.pbtxt
triton/encoder/: config.pbtxt
triton/fbank_extractor/: config.pbtxt
triton/fbank_extractor/1/: fbank_model.py  feat.py  model.py
triton/feature_extractor/: config.pbtxt  config.yaml
triton/feature_extractor/1/: fbank.py  feat.py  featstream.py  lru_dict.py  model.py
triton/lfr_cmvn_pe/: config.pbtxt
triton/pure_cif/: config.pbtxt
triton/pure_cif/1/: model.py
triton/streaming_paraformer/: config.pbtxt
wheel/: kaldifeat-1.25.5.dev20240914+cuda12.1.torch2.4.1-cp38-cp38-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  kaldifeat-1.25.5.dev20250203+cuda11.7.torch1.13.1-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  kaldifeat-1.25.5.dev20250203+cuda12.1.torch2.5.1-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  kaldifeat-1.25.5.dev20250630+cpu.torch1.13.1-cp310-cp310-manylinux2014_x86_64.manylinux_2_17_x86_64.whl  kaldifeat-1.25.5.dev20250807+cuda12.8.torch2.8.0-cp310-cp310-manylinux_2_27_x86_64.manylinux_2_28_x86_64.whl
