[project]
name = "triton-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "funasr>=1.2.7",
    "funasr-onnx>=0.4.1",
    "onnx==1.18.0",
    "torch==2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
